# TaskManager

./: .env_template  .gitignore  .test.env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: .env_template  alembic.ini  main.py  run_main.py
app/actions/: create_superuser.py
app/alembic/: env.py
app/alembic/versions/: 2024_09_24_1928-5c8d53ced9e0_create_notes_tasks_tables.py  2024_09_25_0026-2a361d0f2b98_create_notes_tasks_tables.py  2024_09_25_0152-3912777f2186_create_notes_tasks_tables.py  2024_09_25_2001-fac0798c99de_create_notes_tasks_tables.py  2024_09_30_1431-228c5e350691_create_notes_tasks_tables.py  2024_10_01_1347-21a5573c6763_create_notes_tasks_tables.py  2024_10_01_1924-f272bb20072a_create_notes_tasks_tables.py  2024_10_02_1604-ed709b754af5_create_users_table.py  2024_10_02_1624-90bb69f0a167_create_tasks_and_notes_tables.py  2024_10_02_1839-7d7e91963baa_create_profile_table.py  (+6 more)
app/api/: __init__.py
app/celery_app/: celery_app.py
app/core/: config.py
app/crud/: categories.py  notes.py  profiles.py  tasks.py
app/models/: __init__.py  access_token.py  category.py  note.py  profile.py  task.py  user.py
app/schemas/: category.py  note.py  profile.py  task.py
app/templates/: email_templates.py
app/utils/: common_log.py  smtp_service.py
tests/: conftest.py  test_config.py  test_main.py
tests/api/: conftest.py  test_notes.py  test_tasks.py
tests/modules/: conftest.py  test_notes.py  test_tasks.py
tests/test_modules/: conftest.py  test_notes.py  test_tasks.py
tests/utils/: note.py  task.py  user.py  utils.py
(+29 files in other folders)
