[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
asyncpg = "^0.29.0"
alembic = "^1.13.3"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
orjson = "^3.10.7"
aiosmtplib = "^3.0.2"
celery = {extras = ["redis"], version = "^5.4.0"}
jinja2 = "^3.1.4"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.24.0"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

